# mal-class-learn

./: .gitignore  application-metadata-extraction.ipynb  classification-application-metadata.ipynb  classification-pkgname.ipynb  evaluate_onnx.py  export_model.py  malware-url-extraction.ipynb  model-export.ipynb  pyproject.toml  scrape-normal-apps.ipynb
