[project]
name = "MalClass"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mix", email = "32300164+mnixry@users.noreply.github.com"},
]
dependencies = ["tqdm>=4.67.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
